--- a/alacritty.toml
+++ b/alacritty.toml
@@ -69,7 +69,7 @@ save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
 [shell]
-args = ["--login", "-c", "tmux a || tmux new -As Main"]
+args = ["--login", "-c", "/Users/ali/.config/script/tmux.sh"]
 program = "/bin/zsh"
 
 [[keyboard.bindings]]
